refine(java): bump floor to 25, add 25 idioms, match sibling toolchain stance
Refinements from /ds-grill-me on PR #31:

- Floor bumped to Java 25 (LTS) across profile, cursor rule, review
  command, README table, setup.sh.
- Add Java 25 idioms: ScopedValue over ThreadLocal, StructuredTaskScope
  for scoped fan-out (flagged preview / --enable-preview), flexible
  constructor bodies.
- Match sibling profiles' toolchain neutrality: lead with JUnit 5
  built-in assertions (AssertJ/Mockito demoted to 'if the repo uses
  them'); formatter is the repo's configured one (google-java-format +
  Spotless only as a default when none); static analysis is the
  project's chosen tool (keep javac -Xlint:all warnings-as-errors).
- Reframe error handling to the modern default: prefer unchecked
  exceptions (compose with streams/lambdas), reserve checked for
  genuinely recoverable cases.
- Add nullability guidance (JDK-first): no null returns for
  collections/strings, references non-null by default with
  Objects.requireNonNull, optional JSpecify @Nullable aside.